; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_apic_flat_64.c_physflat_probe.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_apic_flat_64.c_physflat_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@apic = common dso_local global i32* null, align 8
@apic_physflat = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @physflat_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @physflat_probe() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @apic, align 8
  %3 = icmp eq i32* %2, @apic_physflat
  br i1 %3, label %10, label %4

4:                                                ; preds = %0
  %5 = call i32 (...) @num_possible_cpus()
  %6 = icmp sgt i32 %5, 8
  br i1 %6, label %10, label %7

7:                                                ; preds = %4
  %8 = call i64 (...) @jailhouse_paravirt()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %4, %0
  store i32 1, i32* %1, align 4
  br label %12

11:                                               ; preds = %7
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @num_possible_cpus(...) #1

declare dso_local i64 @jailhouse_paravirt(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
